--- a/app/src/main/res/layout/fragment_tuesday.xml
+++ b/app/src/main/res/layout/fragment_tuesday.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash"
+    android:background="@drawable/pagebkg2"
     tools:context=".Tuesday">
 
     <androidx.recyclerview.widget.RecyclerView
