--- a/app/src/main/res/layout/rc_items.xml
+++ b/app/src/main/res/layout/rc_items.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="30dp"
-    app:cardCornerRadius="20dp"
+    app:cardCornerRadius="40dp"
     android:layout_marginHorizontal="14dp"
     android:layout_marginVertical="15dp"
     app:cardBackgroundColor="@color/my_primary">
 
+
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/rcrelativelayout"
-        android:padding="8dp">
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@drawable/navheader"
+        android:padding="8dp"
+        tools:ignore="TextSizeCheck">
 
         <TextView
             android:id="@+id/timerc"
@@ -22,44 +26,43 @@
             android:layout_height="60dp"
             android:layout_marginTop="32dp"
             android:text="Time"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText,TextSizeCheck" />
 
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/classnamerc"
-            android:text="@string/class_name"
-            android:textSize="22sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
             android:layout_marginTop="12dp"
-            android:layout_marginStart="60dp"
+            android:text="@string/class_name"
+            android:textSize="20sp"
             android:textStyle="bold"
 
             />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/teachernamerc"
-            android:text="@string/teacher_name"
-            android:layout_marginTop="52dp"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:layout_marginStart="60dp"
-            />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/roomnorc"
-            android:text="@string/room_no"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="62dp"
+            android:text="@string/teacher_name"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:textSize="22sp"
+            tools:ignore="TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/roomnorc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="250dp"
-             />
+            android:layout_marginTop="32dp"
+            android:text="@string/room_no"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
 
     </RelativeLayout>
