--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_gravity="bottom"
-    android:background="@drawable/splash"
+    android:background="@drawable/pagebkg2"
     tools:context=".splash">
 
     <de.hdodenhof.circleimageview.CircleImageView
