--- a/app/src/main/res/layout/fragment_thursday.xml
+++ b/app/src/main/res/layout/fragment_thursday.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@drawable/splash"
+    android:background="@drawable/pagebkg2"
     tools:context=".Thursday">
 
 
