--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -15,7 +15,7 @@
         android:id="@+id/app_icon"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="22dp"
         android:src="@drawable/applogo"
         tools:ignore="ImageContrastCheck" />
 
@@ -23,20 +23,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Classify"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="22dp"
         android:textColor="@color/white"
         android:textStyle="bold"
         tools:ignore="HardcodedText,TextContrastCheck" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/navheadermail"
-        android:text="srivastavasunny359@gmail.com"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        tools:ignore="HardcodedText,TextContrastCheck" />
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:id="@+id/navheadermail"-->
+<!--        android:text="srivastavasunny359@gmail.com"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="16sp"-->
+<!--        android:textStyle="bold"-->
+<!--        tools:ignore="HardcodedText,TextContrastCheck" />-->
 
 
 </LinearLayout>
