--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 <!--        this is for night mode-->
-    <style name="nightswitch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="nightswitch" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorControlActivated">#8692f7</item>
         <item name="android:colorForeground">#ff424242</item>
         <item name="android:colorBackgroundFloating">#ff424242</item>
