--- a/app/src/main/res/layout/rc_items.xml
+++ b/app/src/main/res/layout/rc_items.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="30dp"
     app:cardCornerRadius="40dp"
+
     android:layout_marginHorizontal="14dp"
     android:layout_marginVertical="15dp"
     app:cardBackgroundColor="@color/my_primary">
@@ -26,8 +27,8 @@
             android:layout_height="60dp"
             android:layout_marginTop="32dp"
             android:text="Time"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:fontFamily="@font/app"
+            android:textSize="16sp"
             tools:ignore="HardcodedText,TextSizeCheck" />
 
 
@@ -35,23 +36,23 @@
             android:id="@+id/classnamerc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
+            android:layout_marginStart="80dp"
             android:layout_marginTop="12dp"
-            android:text="@string/class_name"
+            android:text="Class Name"
             android:textSize="20sp"
-            android:textStyle="bold"
-
-            />
+            android:fontFamily="@font/app"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/teachernamerc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="58dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="52dp"
             android:text="@string/teacher_name"
             android:textSize="16sp"
-            android:textStyle="bold"
+
+            android:fontFamily="@font/app"
             tools:ignore="TextContrastCheck" />
 
         <TextView
@@ -62,7 +63,8 @@
             android:layout_marginTop="32dp"
             android:text="@string/room_no"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/app"
+            />
 
 
     </RelativeLayout>
