--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/hello_text"
             android:layout_below="@+id/login_icon"
+
             android:orientation="vertical">
 
             <TextView
@@ -38,16 +39,18 @@
                 android:text="Hello"
                 android:textColor="@color/black"
                 android:textSize="32sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/app"
+
                 tools:ignore="HardcodedText" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Welcome Back"
+                android:fontFamily="@font/app"
                 android:textColor="@color/black"
                 android:textSize="32sp"
-                android:textStyle="bold"
+
                 tools:ignore="HardcodedText" />
 
         </LinearLayout>
@@ -65,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:completionThreshold="1"
                 android:background="@drawable/lavenderborder"
                 android:drawableLeft="@drawable/baseline_person_24"
                 android:drawablePadding="8dp"
@@ -72,10 +76,10 @@
                 android:inputType="textEmailAddress"
                 android:padding="16dp"
                 android:textSize="20sp"
-                android:textStyle="bold"
-
+                android:fontFamily="@font/app"
                 tools:ignore="HardcodedText,RtlHardcoded,TextContrastCheck,VisualLintTextFieldSize"
-                android:importantForAutofill="no" />
+                android:importantForAutofill="yes"
+                android:autofillHints="" />
 
             <EditText
                 android:id="@+id/pass_edit_text"
@@ -89,8 +93,8 @@
                 android:inputType="textPassword"
                 android:padding="16dp"
                 android:textSize="20sp"
-                android:textStyle="bold"
-
+                android:fontFamily="@font/app"
+                android:importantForAutofill="yes"
                 tools:ignore="Autofill,HardcodedText,RtlHardcoded,VisualLintTextFieldSize,TextContrastCheck" />
 
             <com.google.android.material.button.MaterialButton
@@ -100,6 +104,7 @@
                 android:layout_marginTop="20dp"
                 android:padding="12dp"
                 android:text="LogIn"
+                android:fontFamily="@font/app"
                 android:textSize="16sp"
                 app:cornerRadius="20dp"
                 tools:ignore="HardcodedText,TextContrastCheck,VisualLintButtonSize" />
@@ -123,7 +128,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
                 android:text="Don't have an account ? "
                 tools:ignore="HardcodedText" />
 
@@ -150,7 +154,7 @@
             android:padding="12dp"
             android:text="Login with Google"
             android:textSize="16sp"
-            android:textStyle="bold"
+            android:fontFamily="@font/app"
             app:cornerRadius="20dp"
             tools:ignore="HardcodedText,RtlHardcoded,TextContrastCheck,UseCompatTextViewDrawableXml,VisualLintButtonSize" />
 
