--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -36,7 +36,7 @@
                 android:text="sunny srivastava"
                 android:textColor="@color/white"
                 android:textSize="22sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/app"
                 tools:ignore="HardcodedText,TextContrastCheck" />
 
 
@@ -88,7 +88,7 @@
                         android:text="Night Mode"
                         android:textColor="@color/lavender"
                         android:textSize="20sp"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/app"
                         tools:ignore="HardcodedText,TextContrastCheck" />
 
                     <Switch
@@ -126,7 +126,7 @@
                         android:text="Notification"
                         android:textColor="@color/lavender"
                         android:textSize="20sp"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/app"
                         tools:ignore="HardcodedText,TextContrastCheck" />
 
                     <Switch
@@ -185,7 +185,7 @@
                     android:text="Theme Mode"
                     android:textColor="@color/lavender"
                     android:textSize="20sp"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/app"
                     tools:ignore="HardcodedText,TextContrastCheck" />
 
                 <HorizontalScrollView
@@ -207,6 +207,7 @@
                             android:text="Theme 1"
                             android:textColor="#263238"
                             app:cornerRadius="20dp"
+                            android:fontFamily="@font/app"
                             tools:ignore="ButtonStyle,HardcodedText" />
 
                         <Button
@@ -216,6 +217,7 @@
                             android:layout_margin="5dp"
                             android:text="Theme 2"
                             android:textColor="#263238"
+                            android:fontFamily="@font/app"
                             app:cornerRadius="20dp"
                             tools:ignore="ButtonStyle,HardcodedText" />
 
@@ -226,6 +228,7 @@
                             android:layout_margin="5dp"
                             android:text="Theme 4"
                             android:textColor="#263238"
+                            android:fontFamily="@font/app"
                             app:cornerRadius="20dp"
                             tools:ignore="ButtonStyle,HardcodedText" />
 
@@ -235,6 +238,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
                             android:text="Theme 5"
+                            android:fontFamily="@font/app"
                             android:textColor="#263238"
                             app:cornerRadius="20dp"
                             tools:ignore="ButtonStyle,HardcodedText,TextContrastCheck" />
@@ -244,13 +248,14 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
                             app:cornerRadius="20dp"
+                            android:fontFamily="@font/app"
                             android:text="Theme 6"
                             tools:ignore="ButtonStyle,HardcodedText" />
 
 
 
 
-                        <!-- add more buttons here as needed -->
+
 
                     </LinearLayout>
 
