--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginBottom="22dp"
         android:textColor="@color/white"
-        android:textStyle="bold"
+        android:fontFamily="@font/app"
         tools:ignore="HardcodedText,TextContrastCheck" />
 
 <!--    <TextView-->
