--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMinWidth="80dp"
+        android:fontFamily="@font/app"
         app:tabMode="scrollable"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -21,6 +22,7 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fontFamily="@font/app"
         tools:ignore="SpeakableTextPresentCheck" />
 
 
