--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,8 +41,10 @@
         app:headerLayout="@layout/nav_header"
 
         app:menu="@menu/nav_menu"
-        app:itemIconTint="@color/lavender"
-        app:itemTextColor="@color/lavender"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black"
+        android:fontFamily="@font/app"
+
 />
 
 </androidx.drawerlayout.widget.DrawerLayout>
