--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#FF4081</color>
+
     <color name="my_primary">#9CB1F0</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
@@ -8,6 +13,8 @@
     <color name="lavender">#8692f7</color>
     <color name="grey">#aaa</color>
     <color name="darkGrey">#ff424242</color>
+    <color name="colorDivider">#808080</color>
+    <color name="colorCardBackground">#424242</color>
 
 
 </resources>
