--- a/app/src/main/res/layout/fragment_monday.xml
+++ b/app/src/main/res/layout/fragment_monday.xml
@@ -21,6 +21,7 @@
         android:layout_margin="20dp"
         android:backgroundTint="@color/lavender"
         android:src="@drawable/baseline_add_24"
+        android:fontFamily="@font/app"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="ContentDescription,ImageContrastCheck,MissingConstraints,RtlHardcoded,SpeakableTextPresentCheck" />
