--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="176dp"
+    android:layout_height="250dp"
     android:gravity="bottom"
     android:padding="16dp"
     android:background="@drawable/navheader"
@@ -15,30 +15,34 @@
         android:id="@+id/app_icon"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginStart="14dp"
         android:src="@drawable/applogo"
         tools:ignore="ImageContrastCheck" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="14dp"
+            android:id="@+id/logodowntext"
+            android:text="CLASSIFY"
+            android:textColor="@color/black"
+            android:fontFamily="@font/app"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText,TextContrastCheck" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Classify"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="22dp"
-        android:textColor="@color/white"
+        android:id="@+id/navheadermail"
+        android:text="srivastavasunny359@gmail.com"
+        android:textColor="@color/darkGrey"
         android:fontFamily="@font/app"
+        android:layout_marginBottom="35dp"
         tools:ignore="HardcodedText,TextContrastCheck" />
 
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="16dp"-->
-<!--        android:id="@+id/navheadermail"-->
-<!--        android:text="srivastavasunny359@gmail.com"-->
-<!--        android:textColor="@color/white"-->
-<!--        android:textSize="16sp"-->
-<!--        android:textStyle="bold"-->
-<!--        tools:ignore="HardcodedText,TextContrastCheck" />-->
+
 
 
 </LinearLayout>
