--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -25,7 +25,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginStart="14dp"
             android:id="@+id/logodowntext"
-            android:text="CLASSIFY"
+            android:text="Classify"
             android:textColor="@color/black"
             android:fontFamily="@font/app"
             android:textSize="16sp"
@@ -39,7 +39,7 @@
         android:text="srivastavasunny359@gmail.com"
         android:textColor="@color/darkGrey"
         android:fontFamily="@font/app"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="37dp"
         tools:ignore="HardcodedText,TextContrastCheck" />
 
 
