--- a/app/src/main/res/layout/rc_items.xml
+++ b/app/src/main/res/layout/rc_items.xml
@@ -24,7 +24,7 @@
         <TextView
             android:id="@+id/timerc"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="Time"
             android:fontFamily="@font/app"
@@ -62,7 +62,7 @@
             android:layout_marginStart="250dp"
             android:layout_marginTop="32dp"
             android:text="@string/room_no"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:fontFamily="@font/app"
             />
 
